<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- title for the dialog showing the error of camera hardware -->
    <string name="camera_error_title">Camera error</string>

    <!-- message for the dialog showing the error of camera hardware -->
    <string name="cannot_connect_camera">Cannot connect to camera.</string>


    <!-- Settings screen, Picture size dialog radio button choices -->
    <string name="pref_camera_picturesize_entry_2592x1936">5M Pixels</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M Pixels</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M Pixels</string>
    <string name="pref_camera_picturesize_entry_1024x768">1M Pixels</string>
    <string name="pref_camera_picturesize_entry_640x480" translatable="false">VGA</string>
    <string name="pref_camera_picturesize_entry_320x240" translatable="false">QVGA</string>


    <!-- Default picture quality setting. See
     pref_camera_jpegquality_entryvalues for possible values -->
    <string name="pref_camera_jpegquality_default" translatable="false">superfine</string>


    <!-- Default flash mode setting.-->
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>

    <!-- Value for flash off setting-->
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>

    <!-- Default white balance setting. -->
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>

    <!-- Default focus mode setting.-->
    <string name="pref_camera_focusmode_default" translatable="false">auto</string>

    <!-- Camera format string for new image files. Passed to java.text.SimpleDateFormat. -->
    <string name="image_file_name_format" translatable="false">"'IMG'_yyyyMMdd_HHmmss"</string>

    <!-- Camera Preferences Picture size dialog box entries -->
    <string-array name="pref_camera_picturesize_entries" translatable="false">
        <!-- TODO: Change to a better name of the preference.
                The first element of the array sould be
                "pref_camera_picturesize_entry_2592x1944". However, we are too
                late for the translation. Since we show the same label as the
                second item, we just use the second one instead.
        -->
        <item>@string/pref_camera_picturesize_entry_2592x1936</item>
        <item>@string/pref_camera_picturesize_entry_2592x1936</item>
        <item>@string/pref_camera_picturesize_entry_2592x1936</item>
        <item>@string/pref_camera_picturesize_entry_2048x1536</item>
        <item>@string/pref_camera_picturesize_entry_1600x1200</item>
        <item>@string/pref_camera_picturesize_entry_1024x768</item>
        <item>@string/pref_camera_picturesize_entry_640x480</item>
        <item>@string/pref_camera_picturesize_entry_320x240</item>
    </string-array>

    <string name="photo_detail_report_options_title">I want to report this photo because...</string>
    <string-array name="report_reasons">
        <item>@string/report_reason_offensive</item>
        <item>@string/report_reason_inappropriate</item>
        <item>@string/report_reason_not_be_there</item>
    </string-array>

    <string name="report_reason_offensive">It\'s offensive</string>
    <string name="report_reason_inappropriate">It\'s inappropriate</string>
    <string name="report_reason_not_be_there">I don\'t want to be in it</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>

    <string name="default_center_color">#00FF00</string>
    <string name="default_edge_color">#FF00FF</string>
    <string name="color_empty_warning">Please enter a color!</string>
    <string name="color_hint">eg:#FFFFFFFF</string>
    <string name="center_color_hint">Center Color</string>
    <string name="edge_color_hint">Edge Color</string>
    <string name="title_radial_gradient_activity">Radial Gradient</string>
    <string name="title_activity_rounded_bitmap_drawable">Rounded Bitmap Drawable from V4</string>
</resources>