<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent"
        android:padding="8dp"
        android:gravity="center"
        android:layout_height="wrap_content"

        android:text="@string/photo_detail_report_options_title"
        android:textSize="18sp"
        />
    <View android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cf515151"/>

    <TextView android:text="@string/action_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:gravity="center"
        />
    <View android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cf515151"/>
    <TextView
        android:id="@+id/btn_cancel"
        android:text="@string/action_cancel"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="8dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>